add: install vuetify

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@nuxt/eslint": "^0.4.0",
     "nuxt": "^3.12.4",
-    "vue": "latest"
+    "vue": "latest",
+    "vuetify": "^3.7.0"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
