--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^0.4.0",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
